# ProjectTemplate

./: .flake8  .gitignore  .isort.cfg  LICENSE  MANIFEST.in  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: changelog.rst
src/YOUR_PACKAGE/: __main__.py
src/package/: __init__.py
src/your_module/: __init__.py  __main__.py  log.py
test/: test_example.py  test_metadata.py
